[tool.poetry]
name = "fzbz"
version = "1.0.0"
description = ""
authors = ["Tim Hopper <tdhopper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
